[FIX] web: ActionMenu position on mobile
This commit fixes the ActionMenu's position on smaller screens by
pushing it to the bottom-right part of the ControlPanel (instead of the
bottom-left one on regular sizes).

It also adjusts its vertical alignment.

--- a/addons/web/static/src/webclient/webclient.scss
+++ b/addons/web/static/src/webclient/webclient.scss
@@ -163,15 +163,6 @@ kbd {
           padding: 2px 10px;
       }
   }
-
-  .o_cp_action_menus .btn {
-      font-size: $font-size-lg;
-      padding: 13px 14px!important;
-
-      > .fa {
-          margin: 0!important;
-      }
-  }
 }
 
 //------------------------------------------------------------------------------
